--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'org.xbib'
-version = '1.0.2'
+version = '1.0.3'
 
 printf "Host: %s\nOS: %s %s %s\nJVM: %s %s %s %s\nGroovy: %s\nGradle: %s\n" +
         "Build: group: ${project.group} name: ${project.name} version: ${project.version}\n",
@@ -41,7 +41,7 @@ repositories {
 
 dependencies {
     compile 'org.xbib:marc:1.0.4'
-    compile "org.xbib:content-rdf:1.0.4"
+    compile "org.xbib:content-rdf:1.0.5"
     testCompile 'junit:junit:4.12'
     testCompile 'org.apache.logging.log4j:log4j-core:2.7'
     testCompile 'org.apache.logging.log4j:log4j-jul:2.7'
@@ -60,7 +60,7 @@ tasks.withType(JavaCompile) {
 test {
     classpath += configurations.provided
     testLogging {
-        showStandardStreams = false
+        showStandardStreams = true
         exceptionFormat = 'full'
     }
     systemProperty 'java.util.logging.manager', 'org.apache.logging.log4j.jul.LogManager'
