--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 group = org.xbib
 name = catalog-entities
-version = 1.0.11
+version = 1.0.12
+
+marc.version = 1.0.9
+content-rdf.version = 1.0.7
+bibliographic-character-sets.version = 1.0.0
+junit.version 4.12
+log4j.version = 2.8
+asciidoclet.version = 1.5.4
+wagon-ssh-external.version = 2.10
