--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 group = org.xbib
 name = catalog-entities
-version = 1.0.38
+version = 1.0.39
 
 marc.version = 1.0.10
 content-rdf.version = 1.0.7
 bibliographic-character-sets.version = 1.0.0
 junit.version 4.12
-log4j.version = 2.8
+log4j.version = 2.8.2
 asciidoclet.version = 1.5.4
-wagon-ssh-external.version = 2.10
+wagon.version = 2.12
